err/gato.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Gato'...
Compiling './lib/python3.5/site-packages/Gato/AnimatedDataStructures.py'...
***   File "./lib/python3.5/site-packages/Gato/AnimatedDataStructures.py", line 51
    print "set color of",v," to ",color
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Gato/AnimationHistory.py'...
***   File "./lib/python3.5/site-packages/Gato/AnimationHistory.py", line 308
    print self.logPrefix + animation.log_str()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Gato/DataStructures.py'...
***   File "./lib/python3.5/site-packages/Gato/DataStructures.py", line 262
    raise IndexError, "smallest of empty priorityDictionary"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Gato/Gato.py'...
***   File "./lib/python3.5/site-packages/Gato/Gato.py", line 558
    def tokenEater(self, type, token, (srow, scol), (erow, ecol), line):
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Gato/GatoDialogs.py'...
***   File "./lib/python3.5/site-packages/Gato/GatoDialogs.py", line 78
    raise TclError, "cannot use pack with this widget"
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Gato/GatoExport.py'...
***   File "./lib/python3.5/site-packages/Gato/GatoExport.py", line 84
    def tokenEater(type, token, (srow, scol), (erow, ecol), line):
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Gato/GatoFile.py'...
***   File "./lib/python3.5/site-packages/Gato/GatoFile.py", line 139
    print "human readable: %s, python representation %s"%(l,repr(l))
                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Gato/GatoSystemConfiguration.py'...
***   File "./lib/python3.5/site-packages/Gato/GatoSystemConfiguration.py", line 141
    print "unsupported operating system %s"%sys.platform
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Gato/GatoTest.py'...
***   File "./lib/python3.5/site-packages/Gato/GatoTest.py", line 634
    print "Usage: GatoTest.py"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Gato/GatoUtil.py'...
***   File "./lib/python3.5/site-packages/Gato/GatoUtil.py", line 97
    except IndexError, IOError:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Gato/Graph.py'...
***   File "./lib/python3.5/site-packages/Gato/Graph.py", line 257
    print v, " -- ", self.adjLists[v]
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Gato/GraphDisplay.py'...
***   File "./lib/python3.5/site-packages/Gato/GraphDisplay.py", line 1352
    print "PrintToPSFile", bb
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Gato/GraphUtil.py'...
***   File "./lib/python3.5/site-packages/Gato/GraphUtil.py", line 391
    file.write("vertices:" + `G.Order()` + ";\n")
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Gato/Gred.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (Gred.py, line 572)
Compiling './lib/python3.5/site-packages/Gato/HMMEd.py'...
***   File "./lib/python3.5/site-packages/Gato/HMMEd.py", line 160
    print "adding", name, order, p
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Gato/HMMXML.py'...
***   File "./lib/python3.5/site-packages/Gato/HMMXML.py", line 50
    print k, d[k]
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Gato/MergedHistories.py'...
***   File "./lib/python3.5/site-packages/Gato/MergedHistories.py", line 254
    print "Function tried to be called: ", arg
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Gato/ObjectGraph.py'...
***   File "./lib/python3.5/site-packages/Gato/ObjectGraph.py", line 156
    raise GraphNotSimpleError, '(%d,%d) is a loop' % (tail,head)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Gato/PlanarEmbedding.py'...
***   File "./lib/python3.5/site-packages/Gato/PlanarEmbedding.py", line 132
    print "--------Node:",i,"--------------"
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Gato/PlanarityTest.py'...
***   File "./lib/python3.5/site-packages/Gato/PlanarityTest.py", line 1006
    print "============================================================"
                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Gato/ProbEditorContinuous.py'...
***   File "./lib/python3.5/site-packages/Gato/ProbEditorContinuous.py", line 1071
    print 'exists'
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Gato/ProbEditorDialogs.py'...
***   File "./lib/python3.5/site-packages/Gato/ProbEditorDialogs.py", line 266
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Gato/ProbEditorWidgets.py'...
***   File "./lib/python3.5/site-packages/Gato/ProbEditorWidgets.py", line 129
    print cnf
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Gato/TextTreeWidget.py'...
***   File "./lib/python3.5/site-packages/Gato/TextTreeWidget.py", line 225
    print "not good: found ",tree_tags,"to collapse!"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Gato/TreeWidget.py'...
***   File "./lib/python3.5/site-packages/Gato/TreeWidget.py", line 242
    print "%s%s:%d"%(indent,self.name,refcnt)
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Gato-1.2.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
